--- a/FoxTale/main/templates/header.html
+++ b/FoxTale/main/templates/header.html
@@ -103,5 +103,17 @@
 
     {% endblock content %}
 
+    <footer>
+        <div class="footer_container">
+            <div class="img_container">
+                <a href="{% url 'home' %}"><img src="{% static 'img/header/Title_logo.png' %}"></a>
+            </div>
+            <div class="extra_footer_links">
+                <a href="">END USER AGREEMENT</a>
+                <a href="">USE OF CONFIDENTIAL DATA</a>
+                <a href="">CONDITIONS OF USE</a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
