--- a/FoxTale/support/templates/list_of_chats.html
+++ b/FoxTale/support/templates/list_of_chats.html
@@ -6,6 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'support_pages/list_of_chats.css' %}">
     <title>Support</title>
 </head>
 <body>
